k8s/localstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: corp-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:3.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4566
          readinessProbe:
            httpGet:
              path: /_localstack/health
              port: 4566
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 6
