k8s/localstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: corp-local
spec:
  selector:
    app: localstack
  type: ClusterIP
  ports:
    - name: edge
      port: 4566
      targetPort: 4566
