k8s/localstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack-ingress
  namespace: corp-local
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    # Add "127.0.0.1 localstack.corp.localhost" to /etc/hosts to resolve this.
    - host: localstack.corp.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localstack
                port:
                  number: 4566
